# comp472

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindPDCurses.cmake
src/: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  CMakeLists.txt  GameManager.cpp  GameManager.h  HumanPlayer.cpp  HumanPlayer.h  Move.h  NaivePlayer.cpp  NaivePlayer.h  Node.cpp  Node.h  Player.h  PlayerFactory.cpp  PlayerFactory.h  RemainingTilesPlayer.cpp  RemainingTilesPlayer.h  UI.cpp  UI.h  main.cpp
src/MonteCarloTreeSearch/: MCTSState.cpp  MCTSState.h
src/Player/: AIPlayer.cpp  AIPlayer.h  BestPathPlayer.cpp  BestPathPlayer.h  BetterCornerCellPlayer.cpp  BetterCornerCellPlayer.h  CellMovesPlayer.cpp  CellMovesPlayer.h  CornerCellPlayer.cpp  CornerCellPlayer.h  DistancePlayer.cpp  DistancePlayer.h  DistanceTravelledPlayer.cpp  DistanceTravelledPlayer.h  HumanPlayer.cpp  HumanPlayer.h  IDontKnowWhatImDoingPlayer.cpp  IDontKnowWhatImDoingPlayer.h  MOAHPlayer.cpp  MOAHPlayer.h  NaivePlayer.cpp  NaivePlayer.h  NeighborPlayer.cpp  NeighborPlayer.h  OthelloPlayer.cpp  OthelloPlayer.h  Player.h  RandomPlayer.cpp  RandomPlayer.h  RemainingTilesPlayer.cpp  RemainingTilesPlayer.h
test/: CMakeLists.txt  main.cpp
